vendor/hdf5-metno-derive-0.10.0/tests/compile-fail/unit-struct.rs
use hdf5_metno_derive::H5Type;

#[derive(H5Type)]
//~^ ERROR proc-macro derive
//~^^ HELP Cannot derive H5Type for unit structs
struct Foo;

fn main() {}
