vendor/hdf5-metno-derive-0.10.0/tests/compile-fail/unit-struct.stderr
error: cannot derive `H5Type` for unit structs
 --> tests/compile-fail/unit-struct.rs:6:8
  |
6 | struct Foo;
  |        ^^^
